# Phial

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  agents.py  ai.py  context.py  documents.py  workspace.py
backend/app/services/: agent_guide.py  agents.py  app_settings.py  attachments.py  auto_link.py  cli_agent.py  context_folder.py  doc_graph.py  doc_source.py  doc_summary.py  doc_text.py  html_agent.py  html_style_reference.py  llm_client.py  media.py  workspace.py
backend/app/utils/: logger.py  responses.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/examples/: priority-board.html  prompt-lab.html
frontend/src/: App.vue  style.css
frontend/src/api/: agents.js  ai.js  context.js  documents.js  graph.js  index.js  workspace.js
frontend/src/components/: AiPanel.vue  AutoLinkAllModal.vue  AutoLinkModal.vue  BlockEditor.vue  ContextPicker.vue  ContextTreeNode.vue  DocOutline.vue  DocSummary.vue  FileTree.vue  GraphCanvas.vue  HtmlEditor.vue  SandboxPreview.vue  SettingsModal.vue
frontend/src/components/blockEditor/: BlockHandleMenu.vue  Callout.js  CalloutView.vue  Columns.js  PhialWidget.js  PhialWidgetView.vue  Toggle.js  (+6 more)
frontend/src/composables/: useToast.js
frontend/src/examples/: index.js
frontend/src/i18n/: index.js
frontend/src/locales/: en.json  zh.json
frontend/src/router/: index.js
frontend/src/views/: EditorView.vue  GraphView.vue  HomeView.vue
