[project]
name = "phial-backend"
version = "0.1.0"
description = "Phial backend - HTML-native document manager API"
readme = "../README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "beautifulsoup4>=4.12",
]

[tool.uv]
package = false
